# InkTranslator

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/: config.py  main.py
backend/src/models/: requests.py  responses.py  schemas.py
backend/src/routes/: __init__.py  dependencies.py
backend/src/routes/routers/: __init__.py  health.py  translation.py
backend/src/services/: orchestrator.py
backend/src/services/inpaint/: mask_generator.py  opencv_inpainter.py
backend/src/services/ocr/: base.py  easy_ocr.py  manga_ocr.py  ocr_manager.py
backend/src/services/render/: font_manager.py  layout_calculator.py  text_renderer.py
backend/src/services/translate/: base.py  deepl_translator.py  google_translator.py  translation_manager.py
backend/src/utils/: exceptions.py  image_utils.py  logger.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ImageHandler.tsx  ImagePreview.tsx  ImageUploader.tsx  NavBar.tsx  OptionsPanel.tsx  ProtectedRoute.tsx
frontend/src/contexts/: SupabaseContext.tsx
frontend/src/pages/: Home.tsx  SignIn.tsx  SignUp.tsx  Translate.tsx
frontend/src/utils/: api.ts  constants.ts  types.ts  validation.ts
